# tom

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: tom-telegram-bridge.service  tom-wake.service
docs/: agent-sdk-peer-runtime.md  ci-runner-setup.md  comms-system-deploy-runbook.md  pm-system-architecture.md  sdk-comms-event-contract.md  sdk-comms-spine.excalidraw  sdk-runtime-agent-lifecycle-diagram.md
examples/: __init__.py  dependency_canvas.py
src/tom/: config.py  llm.py  queries.py  repo.py  trust.py
src/tom/adapters/: board.py  bus.py  openai_compatible.py  protocols.py
src/tom/bridge/: __init__.py  __main__.py  channel_event.py  publisher.py  receiver.py  server.py  telegram.py
tests/: test_authority_ceiling.py  test_board_adapter.py  test_bridge_config.py  test_bridge_server_integration.py  test_bus_event_source.py  test_canvas.py  test_card_mover.py  test_config.py  test_context_injection.py  test_e2e_composition.py  test_graph_projection.py  test_kind_from_subject.py  test_nats_publisher.py  test_openai_compatible.py  test_pane_driver.py  test_pr_state.py  test_queries.py  test_repo.py  test_retro.py  test_review_reconcile.py  test_review_runner.py  test_scrummaster_loop.py  test_session_events.py  test_standup.py  test_status_projection.py  test_systemd_unit.py  test_telegram_bridge.py  test_telegram_bridge_unit.py  test_ticket_suggest.py  test_trust.py  test_wake_cli.py  test_wake_inbox.py  test_wake_relay.py  test_wake_runner.py  test_watermark.py  test_webhook_receiver.py  test_widget_contract.py
(+38 files in other folders)
