[project]
name = "tom"
version = "0.1.0"
description = "Team Operations Mesh — a real-time framework for running a team of autonomous agents with shared context."
requires-python = ">=3.12"
readme = "README.md"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_any_explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
